YTG-#25 [메인][명예의전당버튼] BindingAdapter 로 개그 목록 리사이클러뷰에 isFame 변수 설정해주는 기능 추가

--- a/features/main/src/main/res/layout/bottom_sheet_main.xml
+++ b/features/main/src/main/res/layout/bottom_sheet_main.xml
@@ -7,6 +7,10 @@
     <data>
 
         <variable
+            name="isFame"
+            type="Boolean" />
+
+        <variable
             name="humors"
             type="java.util.List&lt;com.az.model.posts.PostData&gt;" />
     </data>
@@ -76,6 +80,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/humor_sheet_divider"
+            bind:setFame="@{isFame}"
             bind:setItems="@{humors}"
             tools:listitem="@layout/item_humor_card" />
 
