--- a/features/main/src/main/res/layout/fragment_main.xml
+++ b/features/main/src/main/res/layout/fragment_main.xml
@@ -155,7 +155,9 @@
         <include
             android:id="@+id/bottom_sheet_include"
             layout="@layout/bottom_sheet_main"
-            bind:humors="@{vm.humors}" />
+            bind:humors="@{vm.humors}"
+            bind:isFame="@{vm.isHumorsFame}"
+            bind:vm="@{vm}" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="56dp"
