--- a/features/main/src/main/res/layout/item_humor_card.xml
+++ b/features/main/src/main/res/layout/item_humor_card.xml
@@ -95,19 +95,19 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="36dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:fontFamily="@font/sdgnh"
             android:gravity="center"
             android:maxLength="100"
-            android:text="@{humorItem.content}"
+            android:paddingHorizontal="36dp"
             android:textColor="@color/colorSemiBlack"
             android:textSize="35sp"
             app:layout_constraintBottom_toTopOf="@id/comment_count"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/title_humor_card"
+            bind:flexibleSizeText="@{humorItem.content}"
             tools:text="소나무가 삐지면?" />
 
         <ImageView
