YTG-#25 [상세페이지][파일구조] 파일구조 수정

--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -65,7 +65,7 @@
 
     <fragment
         android:id="@+id/detailsFragment"
-        android:name="com.az.detail.DetailsFragment"
+        android:name="com.az.detail.view.DetailsFragment"
         android:label="DetailsFragment"
         app:moduleName="details" />
 
