YTG-#25 [메인][네비게이션] MainFragment 에 데이터 전달 네비 이동 기능 toDetailPage() 추가

--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -67,7 +67,12 @@
         android:id="@+id/detailsFragment"
         android:name="com.az.detail.view.DetailsFragment"
         android:label="DetailsFragment"
-        app:moduleName="details" />
+        app:moduleName="details">
+        <argument
+            android:name="postId"
+            android:defaultValue="0"
+            app:argType="integer" />
+    </fragment>
 
     <fragment
         android:id="@+id/createFragment"
