YTG-#33 [상세페이지][모델] Temp data class 제거 및 수정

--- a/features/details/src/main/res/layout/item_comments.xml
+++ b/features/details/src/main/res/layout/item_comments.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="commentItem"
-            type="com.az.detail.TempCommentData" />
+            type="com.az.model.posts.detail.comments.CommentData" />
 
     </data>
 
